# python-sprint

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: python-tests.yml
notebooks/: README.md
src/: __init__.py
src/week1_text_utils/: core.py
tests/: test_week1_text_utils.py
tools/: README.md  create_github_issues.py
