[project]
name = "python-sprint"
version = "0.1.0"
requires-python = ">=3.11,<3.12"

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-cov==4.1.0",
    "black==24.4.2",
    "flake8==7.1.0",
    "mypy==1.10.1",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scikit-learn==1.5.0",
]